# CoolEase

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CoolEase.code-workspace  Makefile.inc  README.MD  git.txt  log.txt  log_bkp.txt  mise.toml  out.txt  project.yml  pyproject.toml  rc  tcp sim800.txt  test.py  todo.md
.github/workflows/: ceedling-tests.yml  deploy-doxygen.yml
000Webhost/: .htaccess  check_data.php  data.csv  data.txt  dumprequest.php  index.php
Common/: Report_Desc.h
Docs/doxygen/: Doxyfile  config
FreeRTOS/test/: CMakeLists.txt  FreeRTOSConfig.h  test_sim.c
Hardware/PCB/: Pins.rtf
Host/: bootloader  wristwatch
Host/device/: hub.py  wristwatch.py
Hub/: cusb.c  cusb.h  main.c
Sensor/: Makefile
Tools/stm32flash/: stm32flash
Web/Old/: upload.php  upload_save_all.php
cmake/: freertos.cmake  libopencm3.cmake
common/: CMakeLists.txt  aes.c  battery.c  board_defs.c  bootloader_utils.c  fake_battery.c  fake_rfm.c  log.c  memory.c  printf.c  reset.c  rf_scan.c  rfm.c  startup.c  test.c  timers.c
common/include/common/: aes.h  battery.h  board_defs.h  bootloader_utils.h  log.h  memory.h  printf.h  reset.h  rf_scan.h  rfm.h  serial_printf.h  test.h  testing.h  timers.h
common/src/: aes.c  battery.c  board_defs.c  bootloader_utils.c  log.c  memory.c  printf.c  reset.c  rf_scan.c  rfm.c  serial_printf.c  test.c  testing.c  timers.c
common/test/: test_common.c  test_printf.c  test_rf.c
common/test/support/: test_helper.c  test_helper.h
config/: CMakeLists.txt  board_defs.c
config/include/config/: FreeRTOSConfig.h  board_defs.h  hub_defs.h  sensor_defs.h
config/ld/: app.ld  bootloader.ld  common.ld  freestanding.ld  sections.ld
coolease/lib/: hub.c  printf.c  rf_scan.c  rfm.c  sim.c
coolterm/: Chip  EnvTest  SimTest  pcb
develop/: aes_8c.html  aes_8c__incl.map  aes_8c__incl.md5  aes_8c_source.html  aes_8h.html  aes_8h__dep__incl.map  aes_8h__dep__incl.md5  aes_8h__incl.map  aes_8h__incl.md5  aes_8h_source.html  annotated.html  battery_8c.html  battery_8c__incl.map  battery_8c__incl.md5  battery_8c_source.html  battery_8h.html  battery_8h__dep__incl.map  battery_8h__dep__incl.md5  battery_8h__incl.map  battery_8h__incl.md5  battery_8h_source.html  bootloader__utils_8c.html  bootloader__utils_8c__incl.map  bootloader__utils_8c__incl.md5  bootloader__utils_8c_source.html  bootloader__utils_8h.html  bootloader__utils_8h__dep__incl.map  bootloader__utils_8h__dep__incl.md5  bootloader__utils_8h__incl.map  bootloader__utils_8h__incl.md5  bootloader__utils_8h_source.html  classes.html  common_2test_2support_2test__helper_8c.html  common_2test_2support_2test__helper_8c__incl.map  common_2test_2support_2test__helper_8c__incl.md5  common_2test_2support_2test__helper_8c_source.html  common_2test_2support_2test__helper_8h.html  common_2test_2support_2test__helper_8h__dep__incl.map  common_2test_2support_2test__helper_8h__dep__incl.md5  common_2test_2support_2test__helper_8h__incl.map  (+628 more)
develop/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  (+97 more)
docs/RF/: 000webhost File Manager.htm  si4432 reg tmp.rtf
docs/Sim/: 000webhost File Manager.htm  GoMoSimPin.rtf
docs/Start/: CoolEase.rtf  Power.rtf
docs/doxygen/: Doxyfile  dox_layout.h
hardware/PCB/: BOM.xlsx  PickAndPlace.csv
hardware/PCB2 CC1101/: BOM_CoolEase Sensor_2020-04-26_16-25-17.csv  PickAndPlace_Square Safe Version_2020-04-26_16-25-23.csv
host/: README.md  bootloader.py  crc_test.py  device.py  eeprom.py  hub.py
host/device/: bootloader.py  hub.py
hub/: CMakeLists.txt  Makefile  cusb.c  hub.c  hub.ld  hub_bootloader.c  hub_bootloader.ld  hub_test.c  main.c  sim.c  w25qxx.c
hub/include/hub/: board_defs.h  bootloader.h  cusb.h  hub.h  hub_bootloader.h  hub_test.h  sim.h  test_hub.h  testing.h  w25qxx.h
hub/ld/: hub.ld  hub_bootloader.ld  mem_offset.ld
hub/src/: board_defs.c  bootloader.c  cusb.c  hub.c  hub_bootloader.c  hub_test.c  main.c  sim.c  test_hub.c  w25qxx.c
hub/test/: test_hub.c
hub/test/support/: test_helper.c  test_helper.h
libopencm3/mk/: gcc-config.mk  genlink-config.mk
old/stm32f103c8t6/: Makefile  out.csv
old/stm32l021d4p6/: make_clean  make_flash_hub  make_flash_sensor  rules.mk
old/stm32l051c8t6/: make_flash_hub  make_flash_sensor
old/stm32l051c8t6_rfm/: Term.stc  Test in fridge  get_log  log.txt  make_clean  make_flash_hub  make_flash_sensor  rules.mk
sensor/: CMakeLists.txt  Makefile  sensor.c  sensor.ld  sensor_bootloader.c  sensor_bootloader.ld  sensor_test.c  si7051.c  tmp112.c
sensor/include/sensor/: board_defs.h  sensor.h  sensor_bootloader.h  sensor_test.h  si7051.h  tmp112.h
sensor/ld/: mem_offset.ld  sensor.ld  sensor_bootloader.ld
sensor/src/: sensor.c  sensor_bootloader.c  sensor_test.c  tmp112.c
sensor/test/: test_sensor.c
tools/OpenOCD/: stlink.cfg  stm32l0.cfg
tools/openocd/: stlink.cfg
user/rick/: aes_8c.html  aes_8c__incl.map  aes_8c__incl.md5  aes_8c_source.html  aes_8h.html  aes_8h__dep__incl.map  aes_8h__dep__incl.md5  aes_8h__incl.map  aes_8h__incl.md5  aes_8h_source.html  annotated.html  battery_8c.html  battery_8c__incl.map  battery_8c__incl.md5  battery_8c_source.html  battery_8h.html  battery_8h__dep__incl.map  battery_8h__dep__incl.md5  battery_8h__incl.map  battery_8h__incl.md5  battery_8h_source.html  bootloader__utils_8c.html  bootloader__utils_8c__incl.map  bootloader__utils_8c__incl.md5  bootloader__utils_8c_source.html  bootloader__utils_8h.html  bootloader__utils_8h__dep__incl.map  bootloader__utils_8h__dep__incl.md5  bootloader__utils_8h__incl.map  bootloader__utils_8h__incl.md5  classes.html  (+426 more)
web/: CoolEaseWeb.code-workspace  update-temp.php
(+1960 files in other folders)
