cmake_minimum_required(VERSION 3.16)
project(CoolEase)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_C_COMPILER> <FLAGS> <CMAKE_C_LINK_FLAGS> <LINK_FLAGS> <OBJECTS> -o <TARGET>.elf -Wl,--start-group <LINK_LIBRARIES> -lc -lm -Wl,--end-group -Wl,-Map=<TARGET>.map")
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_EXTENSIONS ON)
set(CMAKE_SYSTEM_NAME Generic)
set(CMAKE_SYSTEM_PROCESSOR arm)
set(CMAKE_C_COMPILER arm-none-eabi-gcc)
set(CMAKE_CXX_COMPILER arm-none-eabi-g++)
set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)

add_subdirectory(sensor)
add_subdirectory(hub)
